feat: apply `jacoco` plugin

--- a/telegram-forwarder-bot/build.gradle
+++ b/telegram-forwarder-bot/build.gradle
@@ -2,7 +2,7 @@ plugins {
 //    id 'java'
     id 'org.springframework.boot'
 //    id 'io.spring.dependency-management'
-//    id 'jacoco'
+    id 'jacoco'
 //    id 'org.sonarqube' version '6.2.0.5505'
 //    id 'checkstyle'
 }
@@ -64,26 +64,24 @@ dependencies {
 test {
     useJUnitPlatform()
     jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
-//    finalizedBy jacocoTestReport
+    finalizedBy jacocoTestReport
 }
 
-//jacocoTestReport {
-//    dependsOn test
-//    reports {
-//        xml.required = true
-//    }
-//    classDirectories.setFrom(files(classDirectories.files.collect {
-//        fileTree(dir: it, exclude: [
-//                'io/github/yvasyliev/telegramforwarderbot/configuration/**',
-//                'io/github/yvasyliev/telegramforwarderbot/dto/**',
-//                'io/github/yvasyliev/telegramforwarderbot/entity/**',
-//                'io/github/yvasyliev/telegramforwarderbot/reddit/dto/**',
-//                'io/github/yvasyliev/telegramforwarderbot/reddit/entity/**',
-//                'io/github/yvasyliev/telegramforwarderbot/util/Pointcuts.class',
-//                'io/github/yvasyliev/telegramforwarderbot/TelegramForwarderBotApplication.class'
-//        ])
-//    }))
-//}
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+    }
+    classDirectories.setFrom(files(classDirectories.files.collect {
+        fileTree(dir: it, exclude: [
+                'io/github/yvasyliev/telegramforwarder/bot/configuration/**',
+                'io/github/yvasyliev/telegramforwarder/bot/dto/**',
+                'io/github/yvasyliev/telegramforwarder/bot/entity/**',
+                'io/github/yvasyliev/telegramforwarder/bot/util/Pointcuts.class',
+                'io/github/yvasyliev/telegramforwarder/bot/TelegramForwarderBotApplication.class'
+        ])
+    }))
+}
 
 processResources {
     filesMatching('application.yml') {
