--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '3.5.4' apply false
     id 'io.spring.dependency-management' version '1.1.7' apply false
+    id 'jacoco-report-aggregation'
 }
 
 allprojects {
@@ -59,4 +60,16 @@ subprojects {
 //    tasks.withType(JavaCompile).configureEach {
 //        options.compilerArgs.add("-parameters")
 //    }
+}
+
+dependencies {
+    jacocoAggregation project(':telegram-forwarder-bot')
+}
+
+reporting {
+    reports {
+        testCodeCoverageReport(JacocoCoverageReport) {
+            testSuiteName = "test"
+        }
+    }
 }
