--- a/telegram-forwarder-starter-thymeleaf/build.gradle
+++ b/telegram-forwarder-starter-thymeleaf/build.gradle
@@ -4,6 +4,7 @@ plugins {
 //    id 'java-library'
     id 'org.springframework.boot' apply false
 //    id 'io.spring.dependency-management'
+    id 'jacoco'
 }
 
 //java {
@@ -42,7 +43,18 @@ dependencies {
 test {
     useJUnitPlatform()
     jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
-//    finalizedBy jacocoTestReport
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+    }
+    classDirectories.setFrom(files(classDirectories.files.collect {
+        fileTree(dir: it, exclude: [
+        ])
+    }))
 }
 
 tasks.withType(JavaCompile).configureEach {
