--- a/telegram-forwarder-bot/build.gradle
+++ b/telegram-forwarder-bot/build.gradle
@@ -1,31 +1,9 @@
 plugins {
-//    id 'java'
+    id 'java'
     id 'org.springframework.boot'
-//    id 'io.spring.dependency-management'
-    id 'jacoco'
 //    id 'org.sonarqube' version '6.2.0.5505'
 //    id 'checkstyle'
 }
-
-//group = 'io.github.yvasyliev.telegramforwarder'
-//version = '4.1.0'
-
-//java {
-//    toolchain {
-//        languageVersion = JavaLanguageVersion.of(21)
-//    }
-//}
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-    mockitoAgent
-}
-
-//repositories {
-//    mavenCentral()
-//}
 
 dependencies {
     implementation libs.bundles.telegrambots
@@ -36,23 +14,13 @@ dependencies {
     implementation 'org.apache.commons:commons-collections4:4.5.0'
     implementation 'org.jsoup:jsoup:1.21.1'
     implementation 'org.mapstruct:mapstruct:1.6.3'
-    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
-    annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    mockitoAgent('org.mockito:mockito-core') {
-        transitive = false
-    }
-//    checkstyle 'com.puppycrawl.tools:checkstyle:11.0.0'
-//    checkstyle 'com.github.sevntu-checkstyle:sevntu-checks:1.44.1'
 }
 
 //checkstyle {
@@ -61,17 +29,7 @@ dependencies {
 //    sourceSets = [project.sourceSets.main]
 //}
 
-test {
-    useJUnitPlatform()
-    jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
-    finalizedBy jacocoTestReport
-}
-
 jacocoTestReport {
-    dependsOn test
-    reports {
-        xml.required = true
-    }
     classDirectories.setFrom(files(classDirectories.files.collect {
         fileTree(dir: it, exclude: [
                 'io/github/yvasyliev/telegramforwarder/bot/configuration/**',
