--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
-//plugins {
-//    id 'com.gradle.develocity' version '4.1.1'
-//}
+plugins {
+    id 'com.gradle.develocity' version '4.1.1'
+}
 
 rootProject.name = 'telegram-forwarder-bot'
 
@@ -9,3 +9,10 @@ include 'telegram-forwarder-starter'
 include 'telegram-forwarder-starter-logging'
 include 'telegram-forwarder-starter-thymeleaf'
 include 'telegram-forwarder-starter-reddit'
+
+develocity {
+    buildScan {
+        termsOfUseUrl = "https://gradle.com/help/legal-terms-of-use"
+        termsOfUseAgree = "yes"
+    }
+}
