--- a/telegram-forwarder-bot/build.gradle
+++ b/telegram-forwarder-bot/build.gradle
@@ -1,33 +1,26 @@
 plugins {
     id 'java'
     id 'org.springframework.boot'
-//    id 'org.sonarqube' version '6.2.0.5505'
-//    id 'checkstyle'
 }
 
 dependencies {
-    implementation libs.bundles.telegrambots
     implementation project(':telegram-forwarder-starter')
     implementation project(':telegram-forwarder-starter-logging')
     implementation project(':telegram-forwarder-starter-thymeleaf')
     implementation project(':telegram-forwarder-starter-reddit')
-    implementation 'org.apache.commons:commons-collections4:4.5.0'
-    implementation 'org.jsoup:jsoup:1.21.1'
+
+    implementation libs.bundles.telegrambots
+    implementation libs.commons.collections4
+
     implementation 'org.mapstruct:mapstruct:1.6.3'
-    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     runtimeOnly 'com.h2database:h2'
+
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 }
-
-//checkstyle {
-//    ignoreFailures = false
-//    maxWarnings = 0
-//    sourceSets = [project.sourceSets.main]
-//}
 
 jacocoTestReport {
     classDirectories.setFrom(files(classDirectories.files.collect {
@@ -53,19 +46,3 @@ compileJava {
             '-Amapstruct.defaultInjectionStrategy=constructor',
     ]
 }
-
-//sonar {
-//    properties {
-//        property "sonar.projectKey", "io.github.yvasyliev.telegramforwarderbot:telegram-forwarder-bot"
-//        property "sonar.organization", "yvasyliev"
-//        property "sonar.host.url", "https://sonarcloud.io"
-//        property "sonar.sources", "src/main/"
-//    }
-//}
-
-//develocity {
-//    buildScan {
-//        termsOfUseUrl = "https://gradle.com/help/legal-terms-of-use"
-//        termsOfUseAgree = "yes"
-//    }
-//}
