--- a/telegram-forwarder-starter-reddit/build.gradle
+++ b/telegram-forwarder-starter-reddit/build.gradle
@@ -4,14 +4,14 @@ plugins {
 }
 
 dependencies {
-    implementation libs.bundles.telegrambots
     implementation project(':telegram-forwarder-starter')
-    implementation 'org.apache.commons:commons-collections4:4.5.0'
+
+    implementation libs.bundles.telegrambots
+    implementation libs.commons.collections4
+
     implementation 'org.jsoup:jsoup:1.21.1'
-    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
@@ -19,6 +19,7 @@ jacocoTestReport {
     classDirectories.setFrom(files(classDirectories.files.collect {
         fileTree(dir: it, exclude: [
                 'io/github/yvasyliev/telegramforwarder/reddit/configuration/**',
+                'io/github/yvasyliev/telegramforwarder/reddit/entity/**',
                 'io/github/yvasyliev/telegramforwarder/reddit/dto/**'
         ])
     }))
