--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'org.springframework.boot' version '3.5.4' apply false
     id 'io.spring.dependency-management' version '1.1.7' apply false
     id 'org.sonarqube' version '6.2.0.5505'
+    id 'io.freefair.aggregate-javadoc' version '8.14.2'
 }
 
 allprojects {
@@ -81,6 +82,11 @@ subprojects {
     }
 }
 
+dependencies {
+    subprojects.each {
+        javadoc it
+    }
+}
 sonar {
     properties {
         property "sonar.projectKey", "io.github.yvasyliev.telegramforwarder:telegram-forwarder-bot"
