--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,11 @@
 [versions]
+freefair = "9.0.0"
 commons-collections4 = "4.5.0"
 telegrambots = "9.0.0"
+
+[plugins]
+freefair-aggregate-javadoc = { id = "io.freefair.aggregate-javadoc", version.ref = "freefair" }
+freefair-lombok = { id = "io.freefair.lombok", version.ref = "freefair" }
 
 [libraries]
 commons-collections4 = { module = "org.apache.commons:commons-collections4", version.ref = "commons-collections4" }
