--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.gradle.develocity' version '4.1.1'
 }
 
-rootProject.name = 'telegram-forwarder-bot'
+rootProject.name = 'telegram-forwarder'
 
 include 'telegram-forwarder-bot'
 include 'telegram-forwarder-starter'
