feat: optimize dependencies in the multi module project (#113)

--- a/build.gradle
+++ b/build.gradle
@@ -1,75 +1,90 @@
+import org.springframework.boot.gradle.plugin.SpringBootPlugin
+
 plugins {
     id 'org.springframework.boot' version '3.5.4' apply false
     id 'io.spring.dependency-management' version '1.1.7' apply false
-    id 'jacoco-report-aggregation'
+    id 'org.sonarqube' version '6.2.0.5505'
 }
 
 allprojects {
     group = 'io.github.yvasyliev.telegramforwarder'
-    version = '4.1.0'
-}
-
-subprojects {
-    apply plugin: 'java'
-//    apply plugin: 'org.springframework.boot'
-    apply plugin: 'io.spring.dependency-management'
-
-    java {
-        toolchain {
-            languageVersion = JavaLanguageVersion.of(21)
-        }
-    }
-
-//    configurations {
-//        compileOnly {
-//            extendsFrom annotationProcessor
-//        }
-//        mockitoAgent
-//    }
+    version = '5.0.0'
 
     repositories {
         mavenCentral()
     }
-
-//    dependencyManagement {
-//        imports {
-//            mavenBom SpringBootPlugin.BOM_COORDINATES
-//        }
-//    }
-
-//    dependencies {
-//        implementation libs.bundles.telegrambots
-//        implementation 'org.springframework.boot:spring-boot-starter'
-//        implementation 'org.springframework.boot:spring-boot-starter-aop'
-//        implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-//        implementation 'org.springframework.boot:spring-boot-starter-validation'
-//        annotationProcessor 'org.projectlombok:lombok'
-//        testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-//        mockitoAgent('org.mockito:mockito-core') {
-//            transitive = false
-//        }
-//    }
-//
-//    test {
-//        useJUnitPlatform()
-//        jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
-////    finalizedBy jacocoTestReport
-//    }
-
-//    tasks.withType(JavaCompile).configureEach {
-//        options.compilerArgs.add("-parameters")
-//    }
 }
 
-dependencies {
-    jacocoAggregation project(':telegram-forwarder-bot')
-}
+subprojects {
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'jacoco'
+    apply plugin: 'checkstyle'
 
-reporting {
-    reports {
-        testCodeCoverageReport(JacocoCoverageReport) {
-            testSuiteName = "test"
+    dependencyManagement {
+        imports {
+            mavenBom SpringBootPlugin.BOM_COORDINATES
         }
+    }
+
+    plugins.withType(JavaLibraryPlugin).configureEach {
+        tasks.withType(JavaCompile).configureEach {
+            options.compilerArgs.add("-parameters")
+        }
+    }
+
+    plugins.withType(JavaPlugin).configureEach {
+        java {
+            toolchain {
+                languageVersion = JavaLanguageVersion.of(21)
+            }
+        }
+
+        configurations {
+            compileOnly {
+                extendsFrom annotationProcessor
+            }
+            mockitoAgent
+        }
+
+        dependencies {
+            annotationProcessor 'org.projectlombok:lombok'
+
+            testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+            testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+            mockitoAgent('org.mockito:mockito-core') {
+                transitive = false
+            }
+
+            checkstyle 'com.puppycrawl.tools:checkstyle:11.0.0'
+            checkstyle 'com.github.sevntu-checkstyle:sevntu-checks:1.44.1'
+        }
+
+        test {
+            useJUnitPlatform()
+            jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
+            finalizedBy jacocoTestReport
+        }
+
+        jacocoTestReport {
+            dependsOn test
+            reports {
+                xml.required = true
+            }
+        }
+
+        checkstyle {
+            ignoreFailures = false
+            maxWarnings = 0
+        }
+    }
+}
+
+sonar {
+    properties {
+        property "sonar.projectKey", "io.github.yvasyliev.telegramforwarder:telegram-forwarder-bot"
+        property "sonar.organization", "yvasyliev"
+        property "sonar.host.url", "https://sonarcloud.io"
     }
 }
