--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,38 @@
 import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 plugins {
+    alias libs.plugins.freefair.aggregate.javadoc
+
+    id 'org.sonarqube' version '6.2.0.5505'
+
+    alias libs.plugins.freefair.lombok apply false
+
     id 'org.springframework.boot' version '3.5.4' apply false
     id 'io.spring.dependency-management' version '1.1.7' apply false
-    id 'org.sonarqube' version '6.2.0.5505'
 }
 
 allprojects {
+    apply plugin: 'io.spring.dependency-management'
+
     group = 'io.github.yvasyliev.telegramforwarder'
     version = '5.0.0'
 
     repositories {
         mavenCentral()
     }
-}
-
-subprojects {
-    apply plugin: 'io.spring.dependency-management'
-    apply plugin: 'jacoco'
-    apply plugin: 'checkstyle'
 
     dependencyManagement {
         imports {
             mavenBom SpringBootPlugin.BOM_COORDINATES
         }
     }
+}
+
+subprojects {
+    apply plugin: libs.plugins.freefair.lombok.get().pluginId
+
+    apply plugin: 'jacoco'
+    apply plugin: 'checkstyle'
 
     plugins.withType(JavaLibraryPlugin).configureEach {
         tasks.withType(JavaCompile).configureEach {
@@ -47,8 +55,6 @@ subprojects {
         }
 
         dependencies {
-            annotationProcessor 'org.projectlombok:lombok'
-
             testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
             testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -78,6 +84,12 @@ subprojects {
             ignoreFailures = false
             maxWarnings = 0
         }
+    }
+}
+
+dependencies {
+    subprojects.each {
+        javadoc it
     }
 }
 
