--- a/telegram-forwarder-starter-reddit/build.gradle
+++ b/telegram-forwarder-starter-reddit/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.21.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-restclient'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     annotationProcessor libs.mapstruct.processor
