--- a/telegram-forwarder-starter-thymeleaf/build.gradle
+++ b/telegram-forwarder-starter-thymeleaf/build.gradle
@@ -6,7 +6,7 @@ plugins {
 dependencies {
     api 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
-    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.boot:spring-boot-starter-aspectj'
 }
 
 jacocoTestReport {
