--- a/telegram-forwarder-starter-thymeleaf/build.gradle
+++ b/telegram-forwarder-starter-thymeleaf/build.gradle
@@ -5,8 +5,7 @@ plugins {
 
 dependencies {
     api 'org.springframework.boot:spring-boot-starter-thymeleaf'
-
-    implementation 'org.springframework.boot:spring-boot-starter-aspectj'
+    api 'org.springframework.boot:spring-boot-starter-aspectj'
 }
 
 jacocoTestReport {
