--- a/telegram-forwarder-starter/build.gradle
+++ b/telegram-forwarder-starter/build.gradle
@@ -4,9 +4,9 @@ plugins {
 }
 
 dependencies {
-    implementation libs.bundles.telegrambots
+    api libs.telegrambots.meta
 
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    api 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 jacocoTestReport {
