--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -16,11 +16,17 @@ jobs:
       - name: Setup Gradle
         uses: ./.github/actions/setup-gradle
 
+      - name: Set Git user
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Fetch and merge remote gh-pages
         run: |
           git fetch origin gh-pages || true
           git checkout -B gh-pages origin/gh-pages || git checkout -b gh-pages
-          git merge --allow-unrelated-histories master || true
+          git merge --allow-unrelated-histories master
+          git status
 
       - name: Generate Javadoc
         run: ./gradlew javadoc
@@ -33,8 +39,6 @@ jobs:
 
       - name: Commit and push Javadoc
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "Update Javadoc" || echo "No changes to commit"
           git push origin gh-pages
