--- a/.github/workflows/bump-telegram-forwarder-bot.yml
+++ b/.github/workflows/bump-telegram-forwarder-bot.yml
@@ -22,15 +22,18 @@ jobs:
 
       - name: Get merged PRs since latest release
         id: get-prs
+        env:
+          LATEST_RELEASE: ${{ steps.get-release.outputs.latest-release }}
         run: |
-          SINCE=$(gh release view "v${{ steps.get-release.outputs.latest-release }}" --json publishedAt --jq '.publishedAt')
+          SINCE=$(gh release view "v$LATEST_RELEASE" --json publishedAt --jq '.publishedAt')
           PRS=$(gh pr list --state merged --search "label:patch label:minor label:major merged:>${SINCE}" --json number,labels,mergedAt)
           echo "prs=$PRS" >> $GITHUB_OUTPUT
 
       - name: Get bump type
         id: get-bump-type
+        env:
+          PRS: ${{ steps.get-prs.outputs.prs }}
         run: |
-          PRS='${{ steps.get-prs.outputs.prs }}'
           if echo "$PRS" | jq -e '. | length == 0' >/dev/null; then
             echo "bump-type=" >> $GITHUB_OUTPUT
             exit 0
@@ -47,9 +50,10 @@ jobs:
       - name: Bump version
         if: steps.get-bump-type.outputs.bump-type != ''
         id: bump-version
+        env:
+          VERSION: ${{ steps.get-release.outputs.latest-release }}
+          BUMP_TYPE: ${{ steps.get-bump-type.outputs.bump-type }}
         run: |
-          BUMP_TYPE=${{ steps.get-bump-type.outputs.bump-type }}
-          VERSION=${{ steps.get-release.outputs.latest-release }}
           echo "old-version=$VERSION" >> $GITHUB_OUTPUT
           IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
           if [ "$BUMP_TYPE" = "major" ]; then
@@ -63,17 +67,21 @@ jobs:
           echo "new-version=$NEW_VERSION" >> $GITHUB_OUTPUT
           sed -i "s/^\s*version = '.*'/version = '$NEW_VERSION'/" build.gradle
 
+      - name: Setup Git user
+        if: steps.get-bump-type.outputs.bump-type != ''
+        uses: ./.github/actions/setup-git-user
+
       - name: Create Pull Request
         if: steps.get-bump-type.outputs.bump-type != ''
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NEW_BRANCH: release/v${{ steps.bump-version.outputs.new-version }}
+          COMMIT_MESSAGE: Bump io.github.yvasyliev.forwarder.telegram from ${{ steps.bump-version.outputs.old-version }} to ${{ steps.bump-version.outputs.new-version }}
+          BODY: Bumps [io.github.yvasyliev.forwarder.telegram](https://github.com/yvasyliev/telegram-forwarder-bot) from ${{ steps.bump-version.outputs.old-version }} to ${{ steps.bump-version.outputs.new-version }}
         run: |
           DEFAULT_BRANCH=$(gh repo view --json defaultBranchRef --jq .defaultBranchRef.name)
-          NEW_BRANCH="release/v${{ steps.bump-version.outputs.new-version }}"
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
           git checkout -b "$NEW_BRANCH"
           git add build.gradle
-          git commit -m "Bump io.github.yvasyliev.forwarder.telegram from ${{ steps.bump-version.outputs.old-version }} to ${{ steps.bump-version.outputs.new-version }}"
+          git commit -m "$COMMIT_MESSAGE"
           git push origin "$NEW_BRANCH"
-          gh pr create --title "Bump io.github.yvasyliev.forwarder.telegram from ${{ steps.bump-version.outputs.old-version }} to ${{ steps.bump-version.outputs.new-version }}" --body "Bumps [io.github.yvasyliev.forwarder.telegram](https://github.com/yvasyliev/telegram-forwarder-bot) from ${{ steps.bump-version.outputs.old-version }} to ${{ steps.bump-version.outputs.new-version }}" --base "$DEFAULT_BRANCH"
+          gh pr create --title "$COMMIT_MESSAGE" --body "$BODY" --base "$DEFAULT_BRANCH"
