--- a/.github/actions/setup-ssh/action.yml
+++ b/.github/actions/setup-ssh/action.yml
@@ -26,7 +26,7 @@ runs:
       run: |
         mkdir -p ~/.ssh
         echo "$SSH_KEY" > ~/.ssh/id_ed25519
-        chmod u=r,go= ~/.ssh/id_ed25519
+        chmod u=rw,go= ~/.ssh/id_ed25519
         ssh-keyscan -H "$SSH_HOST" >> ~/.ssh/known_hosts
         echo "ssh-key-path=~/.ssh/id_ed25519" >> $GITHUB_OUTPUT
       shell: bash
