--- a/.github/workflows/checkout-test.yml
+++ b/.github/workflows/checkout-test.yml
@@ -1,10 +1,10 @@
-name: Build
+name: Checkout Test
 
 on:
   workflow_dispatch:
 
 jobs:
-  build:
+  checkout-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
